force-app/main/default/objects/User.object
<CustomObject>
    <listViews>
        <fullName>Case_Management_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.SAML_SUBJECT</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Role_Case_Management__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Role: Case Management</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Only_System_Admins_Create_Edit_Users</fullName>
        <active>true</active>
        <description>Prevents delegated administrators from creating or editing users in sandboxes.</description>
        <errorConditionFormula>AND(
OR (
ISNEW(),
ISCHANGED( Email ),
ISCHANGED( Alias ),
ISCHANGED( Username )),
$User.ProfileId &lt;&gt; '00ed00000017Iob'
)</errorConditionFormula>
        <errorMessage>Only System Administrators can edit your email address. Please contact salesforce.support@asu.edu if you need to change your email address.</errorMessage>
    </validationRules>
</CustomObject>