force-app/main/default/objects/User/fields/Advisor_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Advisor_Calendar_Link__c</fullName>
    <description>User's advising calendar Link, a merge field used in templates. For example SMS templates</description>
    <inlineHelpText>User's appointment calendar link</inlineHelpText>
    <label>Advisor_Calendar_Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>