force-app/main/default/objects/User/fields/API_User__c.field-meta.xml
<CustomField>
    <fullName>API_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Manual] Designates if this user is an API User.</description>
    <inlineHelpText>Check this box if this user is an API User.</inlineHelpText>
    <label>API User</label>
    <type>Checkbox</type>
</CustomField>