force-app/main/default/objects/User/fields/Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Link__c</fullName>
    <description>User Calendar Link, a merge field used in SMS templates</description>
    <label>Calendar_Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>