force-app/main/default/objects/User/fields/FYS_Supervisor_Name__c.field-meta.xml
<CustomField>
    <fullName>FYS_Supervisor_Name__c</fullName>
    <description>FYS user's supervisor name</description>
    <inlineHelpText>Enter the user'ss supervisor name listed in the Success Coach Mapping Tab</inlineHelpText>
    <label>FYS Supervisor Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>