force-app/main/default/objects/User/fields/Mismatched_Community_User__c.field-meta.xml
<CustomField>
    <fullName>Mismatched_Community_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if the Community User no longer matches the associated contact it is tied to. This occurs when the Contact has an ASURITE change or their ASURITE changes. This checkbox will trigger a flow to disassociate the Community User from the Contact</description>
    <inlineHelpText>Check this box if the Community User no longer matches the associated contact it is tied to. This occurs when the Contact has an ASURITE change or their ASURITE changes. This checkbox will trigger a flow to disassociate the Community User from the Contact</inlineHelpText>
    <label>Mismatched Community User</label>
    <type>Checkbox</type>
</CustomField>