force-app/main/default/objects/User/fields/omniChannel_loggedIn__c.field-meta.xml
<CustomField>
    <fullName>omniChannel_loggedIn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Logged on to omni channel</label>
    <type>Checkbox</type>
</CustomField>