force-app/main/default/objects/User/fields/Out_Of_Office_Message__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_Message__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>Out of Office message for SMS text message auto reply</description>
    <inlineHelpText>Ed Plus Success Coach - You can enter an Out of Office Start Date, Out of Office End Date, Out of Office Message to auto-reply to your incoming SMS text messages.</inlineHelpText>
    <label>Out Of Office Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>