force-app/main/default/objects/User/fields/Out_Of_Office_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_Start_Date__c</fullName>
    <description>SMS use this field for Out of Office start date</description>
    <inlineHelpText>Enter Out of Office Start Date, Out of Office End Date and Out of Office Message for SMS text messages to auto reply</inlineHelpText>
    <label>Out Of Office Start Date</label>
    <type>Date</type>
</CustomField>