force-app/main/default/objects/User/fields/Out_Of_Office_Yes_No__c.field-meta.xml
<CustomField>
    <fullName>Out_Of_Office_Yes_No__c</fullName>
    <businessOwnerGroup>Data_Owner_Ed_Plus</businessOwnerGroup>
    <description>Formula field that calculates if the user is Out of Office - True or False. This is used for a step in the criteria on the process builder 'SMS Send OOO Message'.</description>
    <formula>IF(  Out_Of_Office_Start_Date__c &lt;= TODAY() &amp;&amp;   Out_Of_Office_End_Date__c &gt;=TODAY(),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ed Plus Success Coach - You can enter an Out of Office Start Date, Out of Office End Date, Out of Office Message to auto-reply to your incoming SMS text messages.</inlineHelpText>
    <label>Out Of Office Yes / No</label>
    <type>Checkbox</type>
</CustomField>