force-app/main/default/objects/User/fields/PS_Audit_Date_SF_Team__c.field-meta.xml
<CustomField>
    <fullName>PS_Audit_Date_SF_Team__c</fullName>
    <description>When was the last time an user audit returned this user?</description>
    <inlineHelpText>When was the last time an user audit returned this user?</inlineHelpText>
    <label>PS Audit Date SF Team</label>
    <type>Date</type>
</CustomField>