force-app/main/default/objects/User/fields/Role_Case_Management_AuditDate__c.field-meta.xml
<CustomField>
    <fullName>Role_Case_Management_AuditDate__c</fullName>
    <description>Populated by the User Audit Matcher process when processing a file for the Case Management PS security role.</description>
    <inlineHelpText>Populated by the User Audit Matcher process when processing a file for the Case Management PS security role.</inlineHelpText>
    <label>Case Management Audit Date</label>
    <type>Date</type>
</CustomField>