force-app/main/default/objects/User/fields/Role_Graduate_Academic_Advisor_Portal__c.field-meta.xml
<CustomField>
    <fullName>Role_Graduate_Academic_Advisor_Portal__c</fullName>
    <complianceGroup>FERPA</complianceGroup>
    <defaultValue>false</defaultValue>
    <description>Indicates user has access to Graduate Academic Advisor Portal. PeopleSoft security role = ASU_FC_SF GP Graduate Portal</description>
    <inlineHelpText>Indicates user has access to the Graduate Academic Advisor Portal. Users will be assigned the permission set Role: Graduate Academic Advisor Portal (Service Users).</inlineHelpText>
    <label>Graduate Academic Advisor Portal</label>
    <type>Checkbox</type>
</CustomField>