force-app/main/default/objects/User/fields/Role_Student_360__c.field-meta.xml
<CustomField>
    <fullName>Role_Student_360__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[PeopleSoft] security Role = ASU_SA_SR Salesforce Student 360</description>
    <inlineHelpText>Permission Set = Role: Student 360</inlineHelpText>
    <label>Student 360</label>
    <type>Checkbox</type>
</CustomField>