force-app/main/default/objects/User/fields/Sandbox_MULEOAUTH__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_MULEOAUTH__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notates user that should be set up in the MuleOAuth Sandbox. Also prevents user from being frozen in conjunction with the UserSandboxUnfreezeBatch batch job.</description>
    <inlineHelpText>In MULEOAUTH, set ET team as admin. Notates user that should be set up in the MuleOAuth Sandbox. Also prevents user from being frozen in conjunction with the UserSandboxUnfreezeBatch batch job.</inlineHelpText>
    <label>MuleOAuth Sandbox Access</label>
    <type>Checkbox</type>
</CustomField>