force-app/main/default/objects/User/fields/Sandbox_WPC__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_WPC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Notates user that should be set up in the WPC Sandbox. Also prevents user from being frozen in conjunction with the UserSandboxUnfreezeBatch batch job.</description>
    <inlineHelpText>In WPC, set ET team as admin. Notates user that should be set up in the WPC Sandbox. Also prevents user from being frozen in conjunction with the UserSandboxUnfreezeBatch batch job.</inlineHelpText>
    <label>WPC Sandbox Access</label>
    <type>Checkbox</type>
</CustomField>