force-app/main/default/objects/User/validationRules/OOO_EndDate_greater_than_StartDate_check.validationRule-meta.xml
<ValidationRule>
    <fullName>OOO_EndDate_greater_than_StartDate_check</fullName>
    <active>true</active>
    <description>Validation rule to check that the end date for OOO should be greater than the start date</description>
    <errorConditionFormula>OR(
( Out_Of_Office_End_Date__c  &lt;  Out_Of_Office_Start_Date__c ),
AND( Out_Of_Office_End_Date__c&gt;= TODAY(), ISBLANK(Out_Of_Office_Message__c ) )
)</errorConditionFormula>
    <errorMessage>Incorrect Out Of Office values.  Please enter Out Of office start date,  Out of Office End Date and Out of Office message.</errorMessage>
</ValidationRule>