force-app/main/default/objects/User/listViews/Active_API_SMS_Magic.listView-meta.xml
<ListView>
    <fullName>Active_API_SMS_Magic</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.CELL</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>PHONE_VERIFIED</columns>
    <columns>HAS_USER_VERIFIED_PHONE</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>chatter</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>startsWith</operation>
        <value>ASU SMS</value>
    </filters>
    <label>Active APIs - SMS Magic</label>
</ListView>