force-app/main/default/objects/User/listViews/Active_APIs_DEV_Email.listView-meta.xml
<ListView>
    <fullName>Active_APIs_DEV_Email</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ADDRESS_STREET</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.EMAIL</field>
        <operation>equals</operation>
        <value>salesforce.development@asu.edu</value>
    </filters>
    <label>Active APIs - DEV Email</label>
</ListView>