force-app/main/default/objects/User/listViews/Active_APIs_Sandbox_Access.listView-meta.xml
<ListView>
    <fullName>Active_APIs_Sandbox_Access</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <columns>Sandbox_DEV__c</columns>
    <columns>Sandbox_QA__c</columns>
    <columns>Sandbox_UAT__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>API</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active APIs - Sandbox Access</label>
</ListView>