force-app/main/default/objects/User/listViews/Active_Users_Logins.listView-meta.xml
<ListView>
    <fullName>Active_Users_Logins</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>chatter</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>System Administrator,System Admin (PW Not Expired)</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notContain</operation>
        <value>ASU Community</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_LOGIN</field>
        <operation>greaterOrEqual</operation>
        <value>1/1/2019 12:00 AM</value>
    </filters>
    <label>Active Users Logins</label>
</ListView>