force-app/main/default/objects/User/listViews/Active_Users_with_Verification_Methods.listView-meta.xml
<ListView>
    <fullName>Active_Users_with_Verification_Methods</fullName>
    <booleanFilter>1 AND ( 2 OR 3 OR 4 OR 5)</booleanFilter>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>PHONE_VERIFIED</columns>
    <columns>HAS_USER_VERIFIED_PHONE</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <columns>HAS_TOTP</columns>
    <columns>HAS_AUTHENTICATOR</columns>
    <columns>HAS_TEMP_CODE</columns>
    <columns>HAS_U2F</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_TOTP</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_AUTHENTICATOR</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_TEMP_CODE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>HAS_U2F</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Users with Verification Methods</label>
</ListView>