force-app/main/default/objects/User/listViews/ActiveAPIs.listView-meta.xml
<ListView>
    <fullName>ActiveAPIs</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.ADDRESS_STREET</columns>
    <columns>LAST_UPDATE</columns>
    <columns>HAS_USER_VERIFIED_EMAIL</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FIRST_NAME</field>
        <operation>equals</operation>
        <value>API</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active APIs</label>
</ListView>