force-app/main/default/objects/User/listViews/ActiveUsersNoAdmins.listView-meta.xml
<ListView>
    <fullName>ActiveUsersNoAdmins</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.SAML_SUBJECT</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USER_ROLE.NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.USERS.ALIAS</field>
        <operation>notEqual</operation>
        <value>chatter</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>notEqual</operation>
        <value>System Administrator,System Admin (PW Not Expired)</value>
    </filters>
    <label>Active Users (No Admins)</label>
</ListView>