force-app/main/default/objects/User/listViews/Admin_User_Deprovisioning.listView-meta.xml
<ListView>
    <fullName>Admin_User_Deprovisioning</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Admin_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Z Deprovision</value>
    </filters>
    <label>Admin | User Deprovisioning</label>
    <sharedTo>
        <group>Identity_Management_Case</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>