force-app/main/default/objects/User/listViews/Admin_User_Provisioning_Chatter_Only.listView-meta.xml
<ListView>
    <fullName>Admin_User_Provisioning_Chatter_Only</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CORE.USERS.EMAIL</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.TITLE</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>CORE.USERS.DIVISION</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>Admin_Notes__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USER_ROLE.NAME</field>
        <operation>contains</operation>
        <value>Z Unassigned</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>ASU Chatter User</value>
    </filters>
    <filters>
        <field>CREATED_BY_ALIAS</field>
        <operation>equals</operation>
        <value>dbamp</value>
    </filters>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>notContain</operation>
        <value>duplicate</value>
    </filters>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Admin | User Provisioning</label>
    <sharedTo>
        <group>Identity_Management_Case</group>
        <group>UTO_Administration</group>
    </sharedTo>
</ListView>